[tool.poetry]
name = "scrapingant-client-python"
version = "0.1.0"
description = "Official python client for the ScrapingAnt API."
authors = ["andrii.kovalenko <adrekoval@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ScrapingAnt/scrapingant-client-python"
repository = "https://github.com/ScrapingAnt/scrapingant-client-python"
keywords = ["scrapingant", "api", "scraper", "scraping"]
classifiers = [
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[tool.poetry.dependencies]
python = "^3.5"
requests = ">=2,<3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = ">=3, <4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
